primarily fixing Z-Index values, adding animations

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
 	--app-bg-color: #001;
-	--app-text-color: #2b040b;
+	--app-text-color: #fefefe;
 	--app-btn-color: #fbcc8d;
 	--app-padding: 25px;
 	--app-border-rad: 8px;
@@ -27,16 +27,19 @@ body {
 
 .correct {
 	color: #282;
+	animation: dustEffect 0.5s ease-out forwards;
 }
 
 .hidden {
 	display: none;
 	opacity: 0;
+	z-index: -100;
 }
 
 .visible {
 	display: block;
 	opacity: 1;
+	z-index: 5000;
 }
 
 .flex {
@@ -47,8 +50,6 @@ body {
 	flex-direction: column;
 }
 
-
-
 main {
 	height: 100svh;
 	width: 100%;
@@ -56,6 +57,7 @@ main {
 	background-size: cover;
 	justify-content: center;
 	align-items: center;
+	position: relative;
 }
 
 .canyon-front {
@@ -67,16 +69,16 @@ main {
 	z-index: 500;
 }
 
+.animation-wrapper {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
 h1 {
-	width: fit-content;
-	height: fit-content;
-	background: var(--app-gradient);
-	padding: 5px 25px;
-	border-radius: var(--app-border-rad);
 	font-size: 5rem;
 	color: var(--app-text-color);
-	position: fixed;
-	top: 10px;
+	margin: 25px;
 }
 
 h2 {
@@ -84,30 +86,40 @@ h2 {
 	color: var(--app-text-color);
 }
 
+.info {
+	justify-content: space-between;
+}
+
 h3 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	color: var(--app-text-color);
 	text-align: center;
 
-}
-
-.start-scrn {
-	opacity: 1; 
-	display: block; 
-}
-
-.scavenger-joe {
-	width: 24svw;
-	height: auto;
-	position: fixed;
-	bottom: 25px;
-	left: 100px;
-	z-index: 1000;
+	span {
+		font-size: 3rem;
+	}
 }
 
 .copyright {
 	font-size: 1rem;
 }
+
+.start-scrn {
+	position: relative;
+	/* z-index: 500;
+	opacity: 1; 
+	display: block;  */
+}
+
+/* .scavenger-joe {
+	width: 20svw;
+	height: auto;
+	position: fixed;
+	bottom: 25px;
+	left: 100px;
+	z-index: 500;
+} */
+
 
 .text-box {
   position: fixed;
@@ -119,11 +131,10 @@ h3 {
 	background: var(--app-gradient);
 	border-radius: var(--app-border-rad);
 	padding: var(--app-padding);
-  width: 400px;
+  width: fit-content;
   height: fit-content;
 	text-align: center;
 	align-items: center;
-	z-index:500;
 }
 
 .start-btn {
@@ -132,7 +143,7 @@ h3 {
   padding: var(--app-padding);
   margin: var(--app-padding);
   border-radius: var(--app-border-rad);
-  z-index: 1000;
+  z-index: 500;
   background: #445 url(../img/bunker.png) no-repeat center center;
   background-size: cover;
   color: #fff;
@@ -166,20 +177,21 @@ h3 {
 	flex-direction: column;
 	padding: var(--app-padding);
 	border-radius: var(--app-border-rad);
-	opacity: 0;
-	display: hidden;
-	z-index: 1;
+	/* opacity: 0;
+	display: none;
+	z-index: 0; */
 }
 
 .word-display {
 	height:100px;
 	width: 100%;
-	padding: var(--app-padding);
+	line-height: 100px;
+	padding: var(--app-padding) 0;
 	border-radius: var(--app-border-rad);
 	color: #111;
-	font-size: 2rem;
-	z-index: 2000;
-	display: block;
+	font-size: 3rem;
+	/* z-index: 2000; */
+	/* display: block; */
 }
 
 .word-entry {
@@ -192,7 +204,7 @@ h3 {
 	color: #fff;
 	border-radius: var(--app-border-rad);
 	background-color: var(--app-btn-color);
-	z-index: 2000;
+	/* z-index: 5000; */
 }
 
 .word-entry:focus {
@@ -201,7 +213,7 @@ h3 {
 
 .restart-reset {
 	width: fit-content;
-	padding: 5px;
+	padding: 5px var(--app-padding);
 	margin: 5px 0;
 	background-color: var(--app-btn-color);
 	border-radius: var(--app-border-rad);
@@ -209,13 +221,13 @@ h3 {
 	font-size: 1.4rem;
 	font-weight: 500;
 	cursor: pointer;
-	z-index: 3000;
+	/* z-index: 3000;
 	position: absolute;
 	top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
 	display: hidden;
-	opacity: 0;
+	opacity: 0; */
 }
 
 .bunker {
@@ -237,10 +249,24 @@ input[disabled] {
   background-image: url('../img/tumbleweed-drawing.svg'); 
   background-size: cover;
   position: absolute;
+	left: -10px;
 	bottom: 70px;
 	z-index: 100;
-  animation: tumble 20s infinite linear;
+  animation: tumbleRight 20s infinite linear 5s;
 }
+
+.truck {
+  width: 40px;
+  height: 30px;
+  background-image: url('../img/army-truck.png'); 
+  background-size: cover;
+  position: absolute;
+	right: -10px;
+	bottom: 120px;
+	z-index: 100;
+  animation: truck 20s infinite linear 3s;
+}
+
 @keyframes wobble {
   0% {
     transform: rotate(0deg);
@@ -260,15 +286,25 @@ input[disabled] {
   }
 }
 
-.hidden {
-	display: none;
-	opacity: 0;
+@keyframes dustEffect {
+  0% {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateY(0px);
+  }
+  50% {
+    opacity: 0.7;
+    filter: blur(2px);
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 0;
+    filter: blur(10px);
+    transform: translateY(-30px);
+  }
 }
 
-.visible {
-	display: block;
-	opacity: 1;
-}
+
 
 .flex {
 	display: flex;
@@ -288,20 +324,30 @@ input[disabled] {
 
 
 
-@keyframes tumble {
+@keyframes tumbleRight {
   0% {
     transform: translateX(0) rotate(0deg);
   }
   25% {
-    transform: translateX(800px) rotate(180deg);
+    transform: translateX(500px) rotate(360deg);
   }
   50% {
-    transform: translateX(0) rotate(355deg);
+    transform: translateX(1000px) rotate(720deg);
   }
   75% {
-    transform: translateX(-800px) rotate(180deg);
+    transform: translateX(1500px) rotate(1080deg);
   }
   100% {
-    transform: translateX(0) rotate(355deg);
+    transform: translateX(2000px) rotate(1440deg);
   }
-} 
+}
+
+
+@keyframes truck {
+  0% {
+    transform: translateX(0);
+	}
+  100% {
+    transform: translateX(-2000px);
+  }
+}
